fixed horizontal scroll bug

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -69,7 +69,7 @@ body {
       content: "";
       display: inline-flex;
       height: 1px;
-      width: 100vw;
+      width: 100%;
       position: absolute;
       left: 50%;
       transform: translate(-50%, 0);
